# python-parallel-data-processing

./: .gitignore  README.md  main.py  pyproject.toml
docs/: rechunk_fix_suggestion.md
docs/w0/: Python 平行資料處理基礎.md
docs/w1/: Dask Array 實戰：從氣象資料到 ML Pipeline.md
notebooks/: 01-data-loading-basics.ipynb  02-processing-and-saving.ipynb  03-ml-pipeline.ipynb  catalog.yaml
w0-foundations/ch1_basics/: bound_example.py  gil_limit_example.py
w0-foundations/ch2_native_tools/: race_condition_example.py
w0-foundations/ch2_native_tools/multi_processing/: load_balancing_example.py  memory_overhead_example.py  serialization_cost_example.py  tiny_tasks_example.py
w0-foundations/ch3_dask_intro/: dashboard_demo.py  dd_frame.py  delayed_example.py
w1/: PRD.md  課程規劃.md
w1-xarray/notebooks/: 01-data-loading-basics.ipynb  02-processing-and-saving.ipynb  03-ml-pipeline-fixed.py  03-ml-pipeline.ipynb  03-ml-pipeline.py  README_FIX.txt  catalog.yaml  test_key_cells.py
