[project]
name = "python-parallel-data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.0",
    "dask[complete]>=2025.10.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
