[project]
name = "python-parallel-data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.0",
    "dask[complete]>=2025.10.0",
    "h5netcdf>=1.7.3",
    "intake-xarray>=2.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "typer>=0.19.2",
    "xarray>=2025.10.1",
    "zarr<3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
